認証関連のコードの削除

--- a/spa/public/index.html
+++ b/spa/public/index.html
@@ -8,6 +8,12 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
+    <style>
+    html, body {
+        padding: 0;
+        margin: 0;
+    }
+    </style>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
